--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,12 +14,12 @@ body {
 	margin: 0;
 	padding: 0;
     background: rgba(237, 237, 237, 1);
-    color: #888;
+    color: #767676;
     font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body h1, h2, h3, h4, h5, h6 {
-	color: #595959;
+	color: #30373b;
 }
 
 body h1 {
@@ -86,12 +86,17 @@ body h1 {
 }
 
 .grey_button {
-	background-color: #595959;
+	background-color: #343737;
 	color: white;
 }
 
+.transparent_button {
+	background-color: white;
+	color: #767676;
+	border: 2px solid #bfbfbf;
+}
+
 #buy_button {
-	margin: 20px 0 5px;
 }
 
 #buy_premium_button {
@@ -99,7 +104,7 @@ body h1 {
 }
 
 #signup_button {
-	width: 300px;
+	width: 250px;
 }
 
 #rainy_button {
@@ -348,12 +353,133 @@ body h1 {
 }
 
 	/****************************
+	NEW IMAC SECTION (MOBILE FIRST)
+	****************************/
+
+#new_imac_section {
+	margin-bottom: 100px;
+}
+
+.new_imac_section_textbox {
+	height: auto;
+	width: 350px;
+	margin: auto;
+	text-align: left;
+	display: inline-block;
+/*	border: 1px dashed grey;
+*/	vertical-align: top;
+	padding: 10px;
+}
+
+.new_imac_section_textbox h3 {
+	text-align: center;
+}
+
+.new_imac_section_textbox p {
+	margin-left: 20px;
+}
+
+.new_imac_section_textbox_buttonbox {
+	width: 100%;
+	text-align: center;
+	margin: 20px auto 20px;
+}
+
+.new_imac_section_textbox_buttonbox img {
+	max-width: 270px;
+	margin-top: -10px;
+
+}
+
+.imac_image {
+	margin: auto;
+/*	border: 1px dashed grey;
+*/	display: inline-block;
+	vertical-align: top;
+}
+
+.imac_image img {
+	height: 247px;
+	width: 302px;
+}
+
+#new_imac_section_textbox_desktop {
+	display: none;
+}
+
+	/****************************
+	Template section
+	****************************/
+
+.template_section {
+	width: 100%;
+	height: auto;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.template_box {
+	width: 350px;
+	border: 10px solid #f7f7f7;
+	height: auto;
+	margin: 0 auto 50px;
+	box-shadow: -2px 4px 43px -11px #888888;
+}
+
+.template_box img {
+	width: 100%;
+	margin-bottom: 0;
+}
+
+.template_textbox {
+	width: 100%;
+	height: 170px;
+	margin-top: -2px;
+	padding-top: 20px;
+	background-color: #f7f7f7;
+	text-align: left;
+/*	border: 1px solid #767676;
+*/}
+
+.template_textbox h3 {
+	text-align: left;
+	margin-top: 0;
+	margin-left: 20px;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+
+}
+
+.template_textbox p {
+	font-size: 14px;
+	text-align: left;
+	margin-left: 20px;
+}
+
+.template_section button {
+    font-size: 12px;
+    height: 30px;
+    padding: 5px 10px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+#rainy_section {
+	background-position: center top;
+}
+
+#jeansy_section {
+	background-position: center 70%;
+}
+
+
+
+	/****************************
 	TEMPLATE LINKS
 	****************************/
 
 .black_opacity ,.black_opacity2{
 	width: 100%;
-	height: 100%;
 	background-color: rgba(0, 0, 0, 0.7);
 }
 
@@ -367,9 +493,10 @@ body h1 {
 
 .section_divider {
 	height: 300px;
-	width: 100%;
-	margin: 50px auto ;
+	width: 70%;
+	margin: 50px auto 0;
 	text-align: center;
+	background-position: center 70%;
 /*	border: 1px dashed lightgrey;
 */
 }
@@ -401,12 +528,12 @@ body h1 {
 }
 
 #not_sure_contact_us {
-	background-image: url("http://s29.postimg.org/w3519lr6v/freelancer_763730_1920.jpg");
+	background-image: url("http://s29.postimg.org/xsddv4inr/shoes_690686.jpg");
 	background-size: cover;
 }
 
 #pricing_divider {
-	background-image: url("http://i.imgur.com/beVpdNh.jpg");
+	background-image: url("http://s10.postimg.org/8xwf5lfgp/res050_1_stutterheim_stockholm_navy_5.jpg");
 	background-size: cover;
 }
 
@@ -488,9 +615,27 @@ body h1 {
 	****************************/
 
 .opacity_filter {
-	width: 360px;
-	height: 240px;
-	z-index: 2;
+	width: 350px;
+    background-color: rgba(0,0,0,0.0);
+    z-index: 2;
+    position: absolute;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;	
+}
+
+#rainy_opacity {
+	height: 411px;
+}
+
+#jeansy_opacity {
+	height: 576px;
+}
+
+.opacity_filter:hover {
+	background-color: rgba(0,0,0,0.1);
 }
 
 #black_opacity_filter {
@@ -561,10 +706,6 @@ body h1 {
 	border-radius: 5px;
 }
 
-.contact_us_box h3 {
-	font-family: Helvetica, Arial, sans-serif;
-}
-
 .contact_us_textbox {
 	height: 80px;
 	width: 290px;
@@ -573,6 +714,11 @@ body h1 {
 	padding-left: 10px;
 /*	border: 1px solid grey;
 */}
+
+.contact_us_box_textbox h3 {
+	font-family: Helvetica, Arial, sans-serif;
+	text-align: center;
+}
 
 
 	/****************************
