--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -18,11 +18,7 @@ body h1 {
 	padding: 50px 0 0 100px;
 }
 
-#header_textbox_text {
-/*	border: 2px dashed blue;
-*/	font-size: 60px;
-	line-height: 70px;
-}
+
 
 #header_textbox_subtext {
 	font-size: 18px;
@@ -70,6 +66,24 @@ body h1 {
 	line-height: 1.5em;
 }
 
+.template_box {
+	width: 480px;
+}
+
+.template_textbox_price {
+	text-align: left;
+	display: inline-block;
+}
+
+#buy_button {
+	width: 220px;
+	margin-left: 20px;
+}
+
+#demo_button {
+	width: 220px;
+}
+
 .opacity_filter {
 }
 
@@ -86,15 +100,10 @@ body h1 {
 }
 
 .contact_us_box {
-	width: 350px;
-	padding-left: 30px;
+	width: 200px;
+	display: inline-block;
+	vertical-align: top;
 }
-
-.contact_us_textbox {
-	padding-left: 20px;
-	width: auto;
-/*	border: 1px dashed grey;
-*/}
 
 .div_about_us {
 	width: 49%;
@@ -106,46 +115,31 @@ body h1 {
 	margin-left: 38%;
 }
 
-.imac_section {
-/*	border: 1px dashed grey;
-*/	width: 850px;
-}
-
-.imac_section_imagebox {
-	display: inline-block;
-}
-
-#imac_section_right {
-	text-align: left;
-/*	border: 1px dashed black;
-*/}
-
-#imac_section_textbox_right {
-	width: 400px;
-	border: 1px dashed red;
-}
-
-.imac_section_textbox button {
-	margin-left: 1%;
-}
-
 	/****************************
 	NEW IMAC SECTION (MOBILE FIRST)
 	****************************/
 
 .new_imac_section_textbox {
-	width: 400px;
-	margin-top: 20px;
+	width: 320px;
+	margin-top: -20px;
 }
 
 .imac_image img {
-	height: auto;
-	width: auto;
+	width: 320px;
 }
 
 .template_section {
 	vertical-align: top;
 	margin: auto;
+}
+
+#new_imac_section_textbox_desktop {
+	display: inline-block;
+	margin-top: -40px;
+}
+
+#new_imac_section_textbox_mobile {
+	display: none;
 }
 
 
@@ -154,24 +148,32 @@ body h1 {
 
 @media only screen and (min-width: 860px) {
 
+#header_big_text {
+/*	border: 2px dashed blue;
+*/	font-size: 30px;
+	line-height: 45px;
+}
+
+#header_big_text p {
+	font-size: 16px;
+	width: 500px;
+}
+
 	/****************************
 	NEW IMAC SECTION (MOBILE FIRST)
 	****************************/
 
 .new_imac_section_textbox {
 	width: 300px;
-	margin: 30px 30px 0;
+	margin: 0 30px;
 }
 
 #new_imac_section_textbox_desktop {
-	display: inline-block;
+	margin-top: 0px;
 }
 
-#new_imac_section_textbox_mobile {
-	display: none;
-}
-
-.imac_image {
+.imac_image img {
+	width: 435px;
 	margin: 0 20px;
 }
 
@@ -202,7 +204,7 @@ body h1 {
 
 .template_textbox {
 	width: 100%;
-	height: 150px;
+	height: 85px;
 	display: inline-block;
 	vertical-align: top;
 	border-radius: 0;
@@ -221,19 +223,25 @@ body h1 {
 }
 
 .template_textbox_description {
-	width: 500px;
+	width: 470px;
 	height: 100px;
 	display: inline-block;
+	margin-top: 5px;
 }
 
 .template_textbox_price {
-	width: 248px;
+	width: 285px;
 	height: 100px;	
 	display: inline-block;
 	vertical-align: top;
+	margin-top: 0;
 	margin-left: 0px;
-	padding-right: 20px;
-}
+	padding-right: 0px;
+	text-align: right;
+/*	border: 1px solid black;
+*/}
+
+
 
 	/****************************
 	CONTACT US SECTION
@@ -326,11 +334,6 @@ body h1 {
 	text-align: center;
 }
 
-.section_divider_textbox h2 {
-	font-size: 40px;
-	line-height: 60px;
-}
-
 .table {
 	display: inline-block;
 	margin: 0 10px;
@@ -370,18 +373,6 @@ body h1 {
 	margin-left: 42%;
 }
 
-.imac_section {
-	width: 1150px;
-	text-align: right;
-	margin-bottom: 100px;
-/*	border: 1px dashed grey;
-*/	
-}
-
-.imac_section_textbox {
-	width: 380px;
-	margin: 15px 0 0 0;
-}
 
 	/****************************
 	NEW IMAC SECTION (MOBILE FIRST)
@@ -389,14 +380,21 @@ body h1 {
 	
 .new_imac_section_textbox {
 	width: 360px;
-	margin: 20px 20px 0;
+	margin: 80px 10px 0;
+}
+
+#new_imac_section_textbox_desktop {
+	margin-top: 40px;
 }
 
 .new_imac_section_textbox_buttonbox img {
 	max-width: 319px;
 }
 
-
+.imac_image img {
+	height: auto;
+	width: auto;
+	margin: 0 20px;
 }
 
 /*.div_top_image {
