--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -75,6 +75,10 @@ body h1 {
 	margin-top: -20px;
 }
 
+.laptop_textbox {
+
+}
+
 .imac_image img {
 	width: 320px;
 }
@@ -133,7 +137,7 @@ body h1 {
 	****************************/
 
 .template_section {
-	width: 780px;
+	width: 100%;
 	height: auto;
 	text-align: center;
 	margin: 0 auto;
@@ -144,7 +148,7 @@ body h1 {
 	width: 780px;
 	border: 20px solid #f7f7f7;
 	height: auto;
-	margin: 0 0 50px;
+	margin: 0 auto 50px;
 	text-align: center;
 }
 
@@ -223,14 +227,15 @@ body h1 {
 
 @media only screen and (min-width: 1149px) {
 
-.
-#signup_header_textbox {
-	top: 120px;
-}
 
 .section_full_width {
 	margin-bottom: 100px;
 }
+
+#header_big_text {
+	font-size: 35px;
+	line-height: 50px;
+
 .template {
 	display: inline-block;
 	width: 300px;
