--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -233,8 +233,9 @@ body h1 {
 }
 
 #header_big_text {
-	font-size: 35px;
+	font-size: 40px;
 	line-height: 50px;
+}
 
 .template {
 	display: inline-block;
