--- a/CSS/style.css
+++ b/CSS/style.css
@@ -102,14 +102,17 @@ body h1 {
 	background-color: transparent;
 	color: white;
 	border: 2px solid white;
-	text-transform: uppercase;
-	font-size: 10px;
 }
 
 #buy_button {
 }
 
 #demo_button {
+}
+
+#header_button {
+	text-transform: uppercase;
+	font-size: 10px;
 }
 
 #go_to_order_link {
