--- a/CSS/style.css
+++ b/CSS/style.css
@@ -113,6 +113,17 @@ body h1 {
 #header_button {
 	text-transform: uppercase;
 	font-size: 10px;
+	-webkit-transition: all 0.1s linear;
+    -moz-transition: all 0.1s linear;
+    -ms-transition: all 0.1s linear;
+    -o-transition: all 0.1s linear;
+    transition: all 0.1s linear;	
+}
+
+#header_button:hover {
+	background-color: white;
+	color: #343737;
+	font-weight: 400;
 }
 
 #go_to_order_link {
@@ -168,11 +179,11 @@ body h1 {
 	line-height: 40px;
 	text-align: center;
 	margin: 0 auto;
+	position: relative;
+	top: 60%;
+	transform: translateY(-50%);
 /*	border: 1px dashed white;
-*/	position: relative;
-  top: 70%;
-  transform: translateY(-50%);
-
+*/	
 }
 
 #header_big_text p {
@@ -448,11 +459,15 @@ body h1 {
 */
 }
 
+.contact_us_box {
+/*	border: 1px dashed grey;
+*/}
 .contact_us_textbox {
-	text-align: left;
+	height: 80px;
 	width: 80%;
 	max-width: 320px;
 	margin: auto;
+	text-align: left;
 /*	border: 1px dashed grey;
 */}
 
