--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -19,8 +19,7 @@ body h1 {
 }
 
 #header_big_text {
-	top: 60%;
-	transform: translateY(-50%);
+
 }
 
 .template_box {
@@ -97,7 +96,9 @@ body h1 {
 	display: none;
 }
 
-
+.contact_us_textbox {
+	height: 120px;
+}
 
 }
 
@@ -209,10 +210,10 @@ body h1 {
 }
 
 .contact_us_textbox {
-	width: 240px;
+	height: 80px;
+	width: 230px;
 	padding-left: 10px;
 	padding-right: 5px;
-	height: auto;
 	margin-bottom: 30px;
 }
 
@@ -326,8 +327,6 @@ body h1 {
 .contact_us_textbox {
 	width: 290px;
 	padding-left: 10;
-	height: 80px;
-
 }
 
 .about_us_box p {
