--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,9 +120,12 @@ body h1 {
     transition: all 0.1s linear;	
 }
 
+#header_button img {
+	width: 10px;
+}
+
 #header_button:hover {
-	background-color: white;
-	color: #343737;
+	background-color: rgba(255, 255, 255, 0.33);
 	font-weight: 400;
 }
 
