--- a/CSS/style.css
+++ b/CSS/style.css
@@ -176,7 +176,7 @@ body h1 {
 #header_big_text {
 	height: auto;
 	color: white;
-	font-family: "Lato" Arial;
+	font-family: Arial;
 	font-size: 25px;
 	line-height: 40px;
 	text-align: center;
