--- a/CSS/style.css
+++ b/CSS/style.css
@@ -196,6 +196,7 @@ body h1 {
 #header_big_text p {
 	width: 280px;
 	font-size: 14px;
+	font-family: "Lato" Arial;
 	font-weight: 200;
 	line-height: 20px;
 	margin: 0 auto -30px;
