--- a/CSS/style.css
+++ b/CSS/style.css
@@ -176,12 +176,12 @@ body h1 {
 #header_big_text {
 	height: auto;
 	color: white;
-	font-family: "Lato" Arial;
+	font-family: 'Lato', sans-serif;
 	font-size: 25px;
 	line-height: 40px;
 	text-align: center;
 	margin: 0 auto;
-	font-weight: 100;
+	font-weight: 300;
 	position: relative;
 	top: 60%;
 	transform: translateY(-50%);
