--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,6 +28,10 @@ body h1 {
 	line-height: 44px;
 }
 
+body p {
+	font-weight: 300;
+}
+
 	/****************************
 	NAVIGATION
 	****************************/
@@ -263,7 +267,7 @@ body h1 {
 
 .new_imac_section_textbox {
 	height: auto;
-	width: 350px;
+	width: 80%;
 	margin: auto;
 	text-align: left;
 	display: inline-block;
