--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -67,11 +67,7 @@ body h1 {
 
 .new_imac_section_textbox {
 	width: 320px;
-	margin-top: -20px;
-}
-
-.laptop_textbox {
-
+	margin-top: -10px;
 }
 
 .imac_image img {
@@ -83,20 +79,35 @@ body h1 {
 	margin: auto;
 }
 
-#new_imac_section_textbox_desktop {
-	display: inline-block;
-	margin-top: -40px;
-}
 
-#new_imac_section_textbox_mobile {
-	display: none;
-}
 
 .contact_us_textbox {
 	height: 120px;
 }
 
 }
+
+/*
+		Switching sides on the iMac section textbox
+ */
+
+@media only screen and (min-width: 664px) {
+	
+#new_imac_section_textbox_desktop {
+	display: inline-block;
+	margin-top: -40px;
+}
+
+	#new_imac_section_textbox_mobile {
+		display: none;
+}
+
+.new_imac_section_textbox {
+	margin-top: -40px;
+}
+
+}
+
 
 @media only screen and (min-width: 860px) {
 
@@ -118,11 +129,16 @@ body h1 {
 
 .new_imac_section_textbox {
 	width: 300px;
-	margin: 0 30px;
+	margin: -20px 30px 0;
+}
+
+#macbook_air_textbox {
+	margin-left: 10px;
 }
 
 #new_imac_section_textbox_desktop {
-	margin-top: 0px;
+	margin-top: -20px;
+	margin-right: 10px;
 }
 
 .imac_image img {
@@ -342,11 +358,16 @@ body h1 {
 	
 .new_imac_section_textbox {
 	width: 360px;
-	margin: 80px 10px 0;
+	margin: 20px 10px 0;
+}
+
+#macbook_air_textbox {
+	margin-left: -30px;
 }
 
 #new_imac_section_textbox_desktop {
 	margin-top: 40px;
+	margin-right: -30px;
 }
 
 .new_imac_section_textbox_buttonbox img {
