--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,17 +36,6 @@ body p {
 	NAVIGATION
 	****************************/
 
-#nav {
-	height: 40px;
-	width: 100%;
-	background-color: rgba(247, 247, 247, 0.9);
-	position: fixed;
-	top: 0;
-/*	border: solid 1px red;
-*/	z-index: 3;
-	display: none;
-}
-
 	/****************************
 	BUTTONS
 	****************************/
@@ -98,8 +87,8 @@ body p {
 	background-color: #566e8f;
 }
 
-.darkgreen_button {
-	background-color: #85a281
+.lightgrey_button {
+	background-color: #606666;
 }
 
 .transparent_button {
@@ -133,21 +122,51 @@ body p {
 	font-weight: 400;
 }
 
-#go_to_order_link {
-	text-decoration: none;
-	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 18px;
-	color: #888;
-	font-weight: 300;
+
+	/****************************
+	OPACITY
+	****************************/
+
+.dark_opacity {
+	background-color: rgba(0, 0, 0, 0.5);
+	background-size: cover;
+	z-index: 2;
+	background-repeat: none;
 }
 
-#go_to_order_link:hover {
-	text-decoration: underline;
+#header_dark_opactiy {
+	width: 100%;
+	height: 100vh;
 }
 
-#go_to_order_link:visited {
-	color: #888; 
-	text-decoration: none;
+#contact_us_dark_opactiy {
+	background-color: rgba(27, 29, 29, 0.95);
+	width: 100%;
+	height: 100%;
+}
+
+.opacity_filter {
+	width: 320px;
+    background-color: rgba(0,0,0,0.0);
+    z-index: 2;
+    position: absolute;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;	
+}
+
+#rainy_opacity {
+	height: 376px;
+}
+
+#jeansy_opacity {
+	height: 526px;
+}
+
+.opacity_filter:hover {
+	background-color: rgba(0,0,0,0.1);
 }
 
 	/****************************
@@ -164,17 +183,6 @@ body p {
 
 #landing_page_header {
 	background-image: url(http://s29.postimg.org/8jqq82o4n/60_RZGXHD06.jpg);
-}
-
-.dark_opacity {
-	background-color: rgba(0, 0, 0, 0.5);
-	background-size: cover;
-	z-index: 2;
-}
-
-#header_dark_opactiy {
-	width: 100%;
-	height: 100vh;
 }
 
 #header_big_text {
@@ -384,33 +392,6 @@ body p {
 	background-position: center 70%;
 }
 
-	/****************************
-	OPACITY FILTERS
-	****************************/
-
-.opacity_filter {
-	width: 320px;
-    background-color: rgba(0,0,0,0.0);
-    z-index: 2;
-    position: absolute;
-    -webkit-transition: all 0.2s linear;
-    -moz-transition: all 0.2s linear;
-    -ms-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;	
-}
-
-#rainy_opacity {
-	height: 376px;
-}
-
-#jeansy_opacity {
-	height: 526px;
-}
-
-.opacity_filter:hover {
-	background-color: rgba(0,0,0,0.1);
-}
 
 	/****************************
 	TABLE
@@ -460,50 +441,65 @@ body p {
 }
 
 	/****************************
-	CONTACT ME
+	CONTACT US
 	****************************/
 
-#contact_me {
+#contact_us {
 	margin-bottom: 0;
 	text-align: center;
-/*	border: 1px dashed grey;
+	background-color: #343737;
+/*	background-image: url(http://s13.postimg.org/9qubwndo7/0_E0_M5_W9_O3_V.jpg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+*//*	border: 1px dashed grey;
 */
 }
 
 .contact_us_box {
-/*	border: 1px dashed grey;
-*/}
+/*	border: 2px solid rgba(255, 255, 255, 0.25);
+	background-color: rgba(255, 255, 255, 0.05);*/
+	border-radius: 2px;
+	padding-top: 20px;
+	color: white;
+	font-weight: 300;
+}
+
 .contact_us_textbox {
 	height: 80px;
 	width: 80%;
 	max-width: 320px;
-	margin: auto;
+	margin: 0 auto 50px;
+	color: white;
 	text-align: left;
 	font-weight: 300;
 /*	border: 1px dashed grey;
 */}
 
-#contact_me_h1 {
+#contact_us_h1 {
 	width: 80%;
 	margin: 0px auto;
 	padding-top: 25px;
 	padding-bottom: 50px;
 	line-height: 1.2em;
+	color: white;
 }
 
-#contact_me h3 {
+#contact_us h3 {
+	color: white;
 }
 
-#contact_me button {
+#contact_us button {
 	text-align: center;
+	border: none;
+	margin-bottom: 25px;
 }
 
 #phone_number {
-}
-
-#footer_dark_opactiy {
-	height: 100%;
-	width: 100%;
+	color: white;
+	font-size: 24px;
+	line-height: 40px;
+	margin-bottom: 15px;
 }
 
 	/****************************
@@ -514,7 +510,7 @@ footer {
 	position: relative;
 	height: 40px;
 	width: 100%;
-	background-color: #1b1d1d;
+	background-color: #2d2f2f;
 	text-align: center;
 	line-height: 40px;
 	font-size: 0.8em;
