--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -51,12 +51,6 @@ body h1 {
 	padding-left: 60px;
 }
 
-.contact_us_box {
-	width: 200px;
-	display: inline-block;
-	vertical-align: top;
-}
-
 #thank_you_list {
 	margin-left: 38%;
 }
@@ -79,12 +73,6 @@ body h1 {
 	margin: auto;
 }
 
-
-
-.contact_us_textbox {
-	height: 120px;
-}
-
 }
 
 /*
@@ -98,13 +86,20 @@ body h1 {
 	margin-top: -40px;
 }
 
-	#new_imac_section_textbox_mobile {
-		display: none;
+#new_imac_section_textbox_mobile {
+	display: none;
 }
 
 .new_imac_section_textbox {
 	margin-top: -40px;
 }
+
+.contact_us_textbox {
+	max-width: 90%;
+	height: 50px;
+	text-align: center;
+/*	border: 1px white dashed;
+*/}
 
 }
 
@@ -216,14 +211,19 @@ body h1 {
 	CONTACT US SECTION
 	****************************/
 
+.contact_us {
+	background-position: center 80%;
+}
+
 .contact_us_box {
 	width: 250px;
-	margin: 0 5px 50px;
+	margin: 0 3% 50px;
 	display: inline-block;
+	vertical-align: top;
 }
 
 .contact_us_textbox {
-	height: 80px;
+	height: 60px;
 	width: 230px;
 	padding-left: 10px;
 	padding-right: 5px;
@@ -235,7 +235,7 @@ body h1 {
 }
 
 #phone_number {
-	font-size: 30px;
+	margin-bottom: 30px;
 }
 
 
@@ -333,13 +333,14 @@ body h1 {
 
 .contact_us_box {
 	width: 320px;
-	margin: 0 0 50px;
+	margin: 0 3% 50px;
 	display: inline-block;
 }
 
 .contact_us_textbox {
 	width: 290px;
 	padding-left: 10;
+	text-align: left;
 }
 
 .about_us_box p {
