--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -14,6 +14,11 @@ body h1 {
 	margin-bottom: 125px;
 }
 
+#header_big_text {
+	top: 60%;
+	transform: translateY(-50%);
+}
+
 .section_full_width {
 	margin-bottom: 70px;
 }
