--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,7 +20,8 @@ body {
 
 body h1, h2, h3, h4, h5, h6 {
 	color: #30373b;
-	font-family: Arial;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 700;
 }
 
 body h1 {
