--- a/CSS/style.css
+++ b/CSS/style.css
@@ -141,9 +141,9 @@ body p {
 }
 
 #contact_us_dark_opactiy {
-	background-color: rgba(27, 29, 29, 0.95);
 	width: 100%;
 	height: 100%;
+	background-color: rgba(45, 47, 47, 0.9);
 }
 
 .opacity_filter {
@@ -337,7 +337,7 @@ body p {
 	width: 320px;
 	border: 10px solid #f7f7f7;
 	height: auto;
-	margin: 50px auto;
+	margin: 50px auto 100px;
 	box-shadow: -2px 4px 43px -11px #888888;
 }
 
@@ -448,18 +448,19 @@ body p {
 #contact_us {
 	margin-bottom: 0;
 	text-align: center;
-	background-color: #343737;
-/*	background-image: url(http://s13.postimg.org/9qubwndo7/0_E0_M5_W9_O3_V.jpg);
-	background-position: center center;
+	color: white;
+/*	background-color: #343737;
+*/	background-image: url(http://s29.postimg.org/8jqq82o4n/60_RZGXHD06.jpg);
+	background-position: center bottom;
 	background-repeat: no-repeat;
 	background-size: cover;
-*//*	border: 1px dashed grey;
+/*	border: 1px dashed grey;
 */
 }
 
 .contact_us_box {
 /*	border: 2px solid rgba(255, 255, 255, 0.25);
-	background-color: rgba(255, 255, 255, 0.05);*/
+	background-color: rgba(255, 255, 255, 0.05);
 	border-radius: 2px;
 	padding-top: 20px;
 	color: white;
@@ -474,7 +475,7 @@ body p {
 	color: white;
 	text-align: left;
 	font-weight: 300;
-/*	border: 1px dashed grey;
+	border: 1px dashed grey;
 */}
 
 #contact_us_h1 {
@@ -502,6 +503,28 @@ body p {
 	line-height: 40px;
 	margin-bottom: 15px;
 }
+
+
+#contact_new {
+	width: 100%;
+	height: 220px;
+	margin: auto;
+	padding: 25px 0;
+	border: 2px solid transparent;
+}
+
+#contact_new h2 {
+	color: white;
+}
+
+#contact_new img {
+	margin: 0 20px;
+}
+
+#contact_new p {
+	margin: 0 0 30px;
+}
+
 
 	/****************************
 	FOOTER
