--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -25,6 +25,7 @@ body h1 {
 
 .template_box {
 	width: 480px;
+	margin-bottom: 100px;
 }
 
 .template_textbox_price {
@@ -171,7 +172,7 @@ body h1 {
 	width: 780px;
 	border: 20px solid #f7f7f7;
 	height: auto;
-	margin: 0 auto 50px;
+	margin: 0 auto 200px;
 	text-align: center;
 }
 
