--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,11 +33,6 @@ body p {
 	font-weight: 300;
 }
 
-button {
-	cursor: pointer;
-	cursor: hand;
-}
-
 a {
 	cursor: pointer;
 	cursor: hand;
@@ -108,12 +103,10 @@ a {
 	border: 2px solid white;
 }
 
-#buy_button:hover {
-	background-color: #2a2d2d;
+#buy_button {
 }
 
-#demo_button:hover {
-	background-color: #4d6280; {
+#demo_button {
 }
 
 #header_button {
