--- a/CSS/style.css
+++ b/CSS/style.css
@@ -368,6 +368,10 @@ a {
 /*	border: 1px solid #767676;
 */}
 
+#template_textbox_jeansy {
+	height: 215px;
+}
+
 .template_textbox_description {
 	width: 300px;
 }
@@ -470,26 +474,6 @@ a {
 */
 }
 
-.contact_us_box {
-/*	border: 2px solid rgba(255, 255, 255, 0.25);
-	background-color: rgba(255, 255, 255, 0.05);
-	border-radius: 2px;
-	padding-top: 20px;
-	color: white;
-	font-weight: 300;
-}
-
-.contact_us_textbox {
-	height: 80px;
-	width: 80%;
-	max-width: 320px;
-	margin: 0 auto 50px;
-	color: white;
-	text-align: left;
-	font-weight: 300;
-	border: 1px dashed grey;
-*/}
-
 #contact_us_h1 {
 	width: 80%;
 	margin: 0px auto;
@@ -517,26 +501,46 @@ a {
 }
 
 
-#contact_new {
-	width: 100%;
-	height: 220px;
-	margin: auto;
-	padding: 25px 0;
+.contact_box {
+	width: 90%;
+	max-width: 400px;
+	height: 500px;
+	margin: 50px auto 50px;
 	border: 2px solid transparent;
+	display: inline-block;
+	vertical-align: top;
 }
 
-#contact_new h2 {
+.contact_box a {
+	text-decoration: none;
+}
+
+.contact_box h2 {
 	color: white;
+	margin-top: 5px;
 }
 
-#contact_new img {
+.contact_box img {
 	margin: 0 20px;
 }
 
-#contact_new p {
+.contact_box p {
 	margin: 0 0 30px;
 }
 
+.contact_box_inner_box {
+/*	border: 1px solid white;
+*/}
+
+#about_us_box {
+}
+
+#about_us_box p {
+	width: 90%;
+	margin: 0 auto 50px;
+	text-align: left;
+	padding-left: 5%;
+}
 
 	/****************************
 	FOOTER
